<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Fruiteefy</string>
    <string name="sign_up">Sign Up</string>
    <string name="company_name">Company Name</string>
    <string name="full_name">Full Name</string>
    <string name="iam">I Am</string>
    <string name="typeofdepositaccount">Type of deposite account</string>
    <string name="settingcode">Sorting Code</string>
    <string name="accountno">Account number</string>
    <string name="branchcode">Branch Code</string>
    <string name="collectiondeliverydate">Collection/delivery date</string>
    <string name="delivercost">Delivery cost:</string>
    <string-array name="cardtype">

        <item>CB_VISA_MASTERCARD</item>
        <item>MAESTRO</item>
        <item>BCMC</item>

    </string-array>
    <string name="cardno">Card number</string>
    <string name="cvv">CVV</string>
    <string name="ownersaddrline1">Owner\'s address (line 1)</string>
    <string name="ownersaddrline2">Owner\'s address (line 2)</string>
    <string name="type">Type</string>
    <string name="availbletxt">If you did not find this donation or if you have recovered it, please notify it here:</string>
    <string name="expiry">Expiry</string>
    <string name="cardaddedsucessfully">Card added sucesfully</string>
    <string name="cardnotaddedsucessfully">Card not added</string>
    <string name="nomatchingresult">No matching result found</string>
    <string name="facebook_app_id">714522302343331</string>
    <string name="fname">First Name</string>
    <string name="lname">Last Name</string>
    <string name="email_id">Email ID</string>
    <string name="emailidoptional">Email ID(Optional)</string>
    <string name="phone_number">Phone Number</string>
    <string name="entermsg">Enter Message</string>
    <string name="address">Address</string>
    <string name="password">Password</string>
    <string name="authentication_dialog_title">Authentication required</string>
    <string name="seen">Seen</string>
    <string name="typemessage">Type a message...</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email">Email</string>
    <string name="exchange">To exchange</string>
    <string name="products">Product(s)</string>
    <string name="seethegarden">See the garden</string>
    <string name="enterrecipyimage">Please insert a photo / image / videos for the recipe</string>
    <string name="pleaseinformifproductaretreatedornot">Please inform if the products are treated or not</string>
    <string name="delete">Delete</string>
    <string name="punctuality">Punctuality</string>
    <string name="quality">Quality</string>
    <string name="ratethisreceipy">Rate this recipe</string>
    <string name="ratethisproduct">Rate this product</string>
    <string name="Conformity">Conformity</string>
    <string name="quantity">Quantity</string>
    <string name="quantitysold">Quantities sold</string>
    <string name="quantityavailable">Quantities available</string>
    <string name="unit">Unit</string>
    <string-array name="unitofmeasure">

        <item>@string/smallenvlop</item>
        <item>@string/largeenvlop</item>
        
        
        
        
        
        
        
        
        
        
        
        

    </string-array>
    <string name="enterunitofmeasure">Please enter unit of measurement</string>
    <string name="enteryouravailability">Please enter your availability</string>
    <string name="enterproductname">Please Enter Product Name</string>
    <string name="give">Give</string>
    <string name="sell">Sell</string>
    <string name="command">Command</string>
    <string name="select">Select</string>
    <string name="selectyouravailability">Select your availability</string>
    <string name="RelatedToOffers">Related To Offers</string>
    <string name="RelatedToAddress">Related To Address</string>
    <string name="sell_ot">Sell</string>
    <string name="sell_ep_ot">Sell(Exchange Possible)</string>
    <string name="give_ot">Give</string>
    <string name="toexchange_ot">To Exchange</string>
    <string name="search_ot">Search</string>
    <string name="select_offer_type">Offer Type</string>
    <string name="addacommenet">Add a comment</string>
    <string name="addtomygarden">Add to my garden</string>
    <string name="selectcat">Please select category</string>
    <string name="selectsubcat">Please select subcategory</string>
    <string name="enterdeliverymethod">Please enter delivery method</string>
    <string name="opinioncommentry">Opinion/Commentary</string>
    <string name="bookfortwoeuro">Book for 2 €</string>
    <string name="pleaseselectcardforpyment">Please select card for payment</string>
    <string name="willbedeductedfromyourwalllet"> Will be deducted from your wallet</string>
    <string name="willbedeductedfrombankaccout">Will be deducted from your bank account</string>
    <string name="Ofthemonth">Of the month:</string>
    <string name="monthly">Monthly</string>
    <string name="productsavailable">Products Available</string>
    <string name="availablequantity">Available quantity</string>
    <string name="sendamsg">Send a message</string>
    <string name="passnotmatch">Password not matching</string>
    <string name="email_error">Invalid Email Id</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="or">OR</string>
    <string name="pass_error"> Password must be at least 6 characters</string>
    <string name="register">Sign UP</string>
    <string name="region">Region</string>
    <string name="loginreg">Login/Register</string>
    <string name="login">Login</string>
    <string name="discountpromocode">Discount promo code (EUR) -</string>
    <string name="view">View</string>
    <string name="deliveryaddressissameasbillingaddress">The delivery address is the same as the billing address</string>
    <string name="reviewtitle">Review Title</string>
    <string name="titleofcomment">Title of the comment</string>
    <string name="titleofoffer">Title of the offer</string>
    <string name="review">Review</string>
    <string name="reviewthisproduct">Review This Product</string>
    <string name="comment">Comment</string>
    <string name="continuefb">Continue with facebook</string>
    <string name="bookby">Book by</string>
    <string name="control">Control</string>
    <string name="selectdate">Select Date</string>
    <string name="ten">10</string>
    <string name="continuegmail">Continue with Google</string>
    <string name="username">Username</string>
    <string name="login_to_continue">Login To Continue</string>
    <string name="new_user">New User? Sign Up To Continue</string>
    <string name="already_user">Already Registered? Login Here</string>
    <string name="serach_garden">Search Garden</string>
    <string name="search_city">Search City</string>
    <string name="hide_unavaliable">Hide Unavailable</string>
    <string name="earsefilter">Erase all filters</string>
    <string name="filter">Filter</string>
    <string name="hideunavailable">Hide Unavailable</string>
    <string name="largeenvlop">Grand Envelopes </string>
    <string name="smallenvlop">Small Envelopes </string>
    <string name="serach_products_supplies">Search Products/Supplies</string>
    <string name="navigation_drawer_open">Drawer Open</string>
    <string name="navigation_drawer_close">Drawer Close</string>
    <string name="skip">Skip</string>
    <string name="searchproduct">Search Product</string>
    <string name="offerno">Offer no</string>
    <string name="offerupdatedsucessfully">Offer updated sucessfully</string>
    <string name="typeofoffer">Type of offer</string>
    <string name="submit">Submit</string>
    <string name="particular">Particular</string>
    <string name="toselect">To Select</string>
    <string name="association">Association/Company</string>
    <string name="pleasegiverating">Please give rating</string>
    <string name="pleasegiveratingpunctuality">Please give rating Punctuality</string>
    <string name="pleasegiveratingquanity">Please give rating Quality</string>
    <string name="pleasegiveratingconfirmity">Please give rating Conformity</string>
    <string name="continueshopping">Continue Shopping</string>
    <string name="emptywishlist">Empty My Wish List</string>
    <string name="pincode">Pincode</string>
    <string name="fill_field">Please fill the field</string>
    <string name="searchtext">Gardens around me</string>
    <string name="searchtextproduct">Products</string>
    <string name="list">List</string>
    <string name="movetocart">Move to cart</string>
    <string name="map">Map</string>
    <string name="basket">Basket</string>
    <string name="purchase">Purchases</string>
    <string name="ok">Ok</string>
    <string name="packingof">Packing Of</string>
    <string name="remaining_stock">Remaining stock</string>
    <string name="stock">Stock</string>
    <string name="title_location_permission">Location Permission</string>
    <string name="text_location_permission">Please Allow to access the location</string>
    <string name="ingredients">Ingredients</string>
    <string name="weights">Weight</string>
    <string name="umo">Umo</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="status">Status</string>
    <string name="country">Country</string>
    <string name="recipes">Recipes</string>
    <string name="item">Item</string>
    <string name="receipts">Receipts</string>
    <string name="gardens">Gardens</string>
    <string name="transfer">Transfer</string>
    <string name="gardenaroundme">Garden around me</string>
    <string name="picoreur_transformateur">Picoreur Transformer :</string>
    <string name="send_message">Send a message</string>
    <string name="min_price">Starting from €</string>
    <string name="seeavailableproduct">See available products</string>
    <string name="price">Price(€)</string>
    <string name="shipping_costcurrency">Shipping Cost(€)</string>
    <string name="remainng_items">Remaining</string>
    <string name="additional_field">Additional Field</string>
    <string name="sendmessage">Send message</string>
    <string name="select_iam">Please select I Am field</string>
    <string name="from">from</string>
    <string name="donationaroundme">Donation around me</string>
    <string name="From">From</string>
    <string name="sendmsg">Send a message</string>
    <string name="myoffer">My Offer</string>
    <string name="mysale">My Sale</string>
    <string name="sale">Sales</string>
    <string name="balance">Balance</string>
    <string name="bankname">Bank name</string>
    <string name="institutionno">Institution number</string>
    <string name="myinfo">My information</string>
    <string name="transferwalletamount">Transfer wallet amount</string>
    <string name="amounttotransfer">Amount to transfer</string>
    <string name="mybooking">My Booking</string>
    <string name="addanoffer">Add an offer</string>
    <string name="apply">Apply</string>
    <string name="cancel">Cancel</string>
    <string name="currency">€</string>
    <string name="opinionaboutreceipy">Your opinion about this recipe</string>
    <string name="my_order">My Order</string>
    <string name="orderno">Order number</string>
    <string name="orderby">Order by</string>
    <string name="dateoforder">Date of the order</string>
    <string name="totalno">Total order</string>
    <string name="pleasesubscribetoaccessservice">Please Subscribe to access this service</string>
    <string name="fruiteefyanualsubscrition">Fruiteefy annual subscription:10 €</string>
    <string name="firstannuity">First annuity</string>
    <string name="myproduct">My Product</string>
    <string name="validate">Validate</string>
    <string name="Promotionalcode">Promotional code</string>
    <string name="subscribe">Subscribe</string>
</resources>