<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/nav_donationaroundme"
        android:checked="true"
        android:icon="@drawable/ic_purchase"
        android:title="@string/donationaroundme"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/nav_orignalmap"
        android:checked="true"
        android:icon="@drawable/ic_map"
        android:title="@string/map"
        app:showAsAction="ifRoom" />


    <item
        android:id="@+id/nav_list"
        android:checked="true"
        android:icon="@drawable/ic_list"
        android:title="@string/myoffer"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/nav_map"
        android:checked="true"
        android:icon="@drawable/plus"
        android:title="@string/addanoffer"
        app:showAsAction="ifRoom" />



    <item
        android:visible="false"
        android:id="@+id/nav_products"
        android:checked="true"
        android:icon="@drawable/pot"
        android:title="@string/myproduct"
        app:showAsAction="ifRoom" />

<!--    <item-->
<!--        android:id="@+id/nav_basket"-->
<!--        android:checked="true"-->
<!--        android:icon="@drawable/tree"-->
<!--        android:title="My Garden"-->
<!--        app:showAsAction="ifRoom" />-->

</menu>