<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:focusable="false"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/login_to_continue"
    android:gravity="center"
    android:padding="10dp"
    android:textColor="@color/colorPrimary"
    android:textSize="18dp"

    />

<ImageView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:src="@drawable/man"/>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    >

<androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardUseCompatPadding="true">


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:orientation="vertical"
    >
<com.google.android.material.textfield.TextInputLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <EditText
        android:id="@+id/edt_email"
        android:layout_width="match_parent"
        android:textSize="14dp"
        android:inputType="textEmailAddress"
        android:drawableLeft="@drawable/ic_user"
        android:drawablePadding="10dp"
        android:layout_height="wrap_content"
        android:hint="@string/email"/>

</com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/edt_pass"
            android:layout_width="match_parent"
            android:textSize="14dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:drawableLeft="@drawable/ic_pass"
            android:drawablePadding="10dp"
            android:hint="@string/password"/>

    </com.google.android.material.textfield.TextInputLayout>
    <TextView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:onClick="forpass"
        android:gravity="right"
        />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_shape"
        android:minHeight="38dp"
        android:text="@string/login"
        android:textColor="@color/white"

        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/or"
        android:textColor="@color/black" />


    <Button
        android:id="@+id/fblogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_shapefb"
        android:minHeight="38dp"
        android:layout_marginTop="20dp"
        android:text="@string/continuefb"
        android:textColor="@color/white"

        />

    <Button

        android:id="@+id/loginbygmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_shapegmail"
        android:minHeight="38dp"
        android:layout_marginTop="20dp"
        android:text="@string/continuegmail"
        android:textColor="@color/white"

        />
    <TextView
        android:id="@+id/tv_new_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="15sp"
        android:text="@string/new_user"
        android:gravity="center"
        android:padding="10dp"
        />

    <TextView
        android:id="@+id/skip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/skip"
        android:gravity="center"
        android:padding="10dp"
        />

</LinearLayout>

</androidx.cardview.widget.CardView>

</RelativeLayout>
</LinearLayout>
</ScrollView>