<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/nav_list"
        android:checked="true"
        android:icon="@drawable/ic_list"
        android:title="@string/item"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/nav_map"
        android:checked="true"
        android:icon="@drawable/ic_map"
        android:title="@string/map"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/nav_purchase"
        android:checked="true"
        android:icon="@drawable/ic_purchase"
        android:title="Mes achats"
        app:showAsAction="ifRoom" />


    <item
        android:id="@+id/nav_basket"
        android:checked="true"
        android:icon="@drawable/ic_basket"
        android:title="@string/basket"
        app:showAsAction="ifRoom" />

</menu>