<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="45dp"

        app:cardUseCompatPadding="true">
<LinearLayout
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="5dp"
    android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:text="@string/orderno"/>


        <TextView
            android:id="@+id/ordernumber"
            android:layout_marginBottom="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:text="@string/orderby"/>


    <TextView
        android:id="@+id/orderby"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/sendmsg"
        android:layout_marginBottom="5dp"
        android:layout_width="wrap_content"
        android:drawableTint="@color/colorPrimary"
        android:layout_height="wrap_content"
        android:drawableRight="@drawable/ic_send"
        android:text="@string/send_message"

        />


        <TextView

            android:text="@string/dateoforder"
            android:layout_width="match_parent"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/dateoforder"
            android:layout_marginBottom="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/totalno"
            android:layout_width="match_parent"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/totalorder"
            android:layout_marginBottom="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <TextView
        android:text="@string/status"
        android:layout_width="match_parent"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/status"
        android:layout_marginBottom="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/stock"
            android:background="@color/colorPrimary"
            android:textColor="@color/white"
            android:gravity="center"
            android:textSize="18sp"
            android:text="@string/view"
            android:layout_margin="5dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="5dp"
            android:paddingBottom="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/cancel"
        android:background="@color/colorPrimary"
        android:textColor="@color/white"
        android:gravity="center"
        android:textSize="18sp"
        android:layout_margin="5dp"
        android:text="@string/cancel"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="5dp"
        android:paddingBottom="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/validate"
        android:background="@color/colorPrimary"
        android:textColor="@color/white"
        android:gravity="center"
        android:layout_margin="5dp"
        android:textSize="18sp"
        android:text="@string/validate"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="5dp"
        android:paddingBottom="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    </LinearLayout>

</LinearLayout>

    </androidx.cardview.widget.CardView>






</LinearLayout>