<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:padding="20dp"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".user_client.Subscription.SubscriptionActivity">



<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:textSize="18dp"
    android:textStyle="bold"
    android:gravity="center"
    android:layout_marginBottom="30dp"
    android:text="@string/pleasesubscribetoaccessservice"/>



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fruiteefyanualsubscrition"/>



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/firstannuity"/>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

    <TextView
        android:textSize="18sp"
        android:id="@+id/pricetopay"
        android:text="10"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

        <TextView
            android:textSize="18sp"
            android:layout_marginLeft="3dp"
            android:layout_toRightOf="@+id/pricetopay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/currency"/>


    </RelativeLayout>

    <EditText
        android:id="@+id/promocode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="5dp"
        android:hint="@string/Promotionalcode"
        android:background="@drawable/edit_back"/>

    <TextView
        android:id="@+id/applytxtvew"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/apply"
        android:layout_marginTop="10dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:layout_gravity="center"
        android:background="@color/colorPrimary"
        android:textColor="@color/white"/>



    <RadioGroup
        android:id="@+id/radiopaymentmethodGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp">



<!--        <RadioButton-->
<!--            android:id="@+id/dinarradio"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:drawableLeft="@drawable/dinarsicon" />-->


        <RadioButton
            android:id="@+id/maestroradio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/maestroicon"
            />

        <RadioButton
            android:id="@+id/visamastercardradio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/visamastercardicon" />

    </RadioGroup>




    <TextView
        android:id="@+id/subscribe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/subscribe"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:layout_gravity="center"
        android:background="@color/colorPrimary"
        android:textColor="@color/white"/>


</LinearLayout>