<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="45dp"

        app:cardUseCompatPadding="true">
<LinearLayout
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="5dp"
    android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:text="@string/orderno"/>


        <TextView
            android:id="@+id/ordernumber"
            android:layout_marginBottom="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:text="@string/orderby"/>


    <TextView
        android:id="@+id/orderby"
        android:layout_marginBottom="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

        <TextView

            android:text="@string/dateoforder"
            android:layout_width="match_parent"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/dateoforder"
            android:layout_marginBottom="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/totalno"
            android:layout_width="match_parent"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/totalorder"
            android:layout_marginBottom="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


    <TextView
        android:text="@string/status"
        android:layout_width="match_parent"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/status"
        android:layout_marginBottom="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>



</LinearLayout>

    </androidx.cardview.widget.CardView>






</LinearLayout>